# mcp-gemini-search

./: .gitattributes  .gitignore  README.md  config.go  config_test.go  go.mod  go.sum  main.go  pyproject.toml  search.go  search_bench_test.go  search_test.go
.agents/plugins/: marketplace.json
.agents/skills/gemini-deep-research/: SKILL.md
.agents/skills/gemini-deep-research-result/: SKILL.md
.agents/skills/gemini-google-search/: SKILL.md
.agents/skills/gemini-google-search/evals/: evals.json
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/gemini-deep-research/: SKILL.md
.codex-plugin/: plugin.json
.github/workflows/: ci.yaml
plugins/mcp-gemini-search/: .mcp.json  README.md
plugins/mcp-gemini-search/.claude-plugin/: plugin.json
plugins/mcp-gemini-search/skills/gemini-deep-research/agents/: openai.yaml
plugins/mcp-gemini-search/skills/gemini-google-search/agents/: openai.yaml
skills/gemini-deep-research-result/: SKILL.md
skills/gemini-deep-research-result/agents/: openai.yaml
skills/gemini-google-search/: SKILL.md
src/mcp_gemini_google_search/: __init__.py  __main__.py  _logging.py  cli.py  config.py  search.py  server.py
src/mcp_gemini_search/: __init__.py  __main__.py  _logging.py  _markdown.py  _version.py  cli.py  config.py  research.py  search.py  server.py
tests/: __init__.py  _helpers.py  conftest.py  test_cli.py  test_config.py  test_e2e.py  test_logging.py  test_markdown.py  test_research.py  test_search.py  test_search_bench.py  test_server.py  test_skills_sync.py
tests/golden/: initialize.json  tools_list.json  tools_list_deep_research.json
