[build-system]
requires = ["hatchling>=1.27", "uv-dynamic-versioning"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "uv-dynamic-versioning"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/mcp_gemini_search"]

[tool.uv-dynamic-versioning]
vcs = "git"
style = "pep440"
bump = true
fallback-version = "0.0.0"

[project]
name = "mcp-gemini-search"
dynamic = ["version"]
description = "MCP server that provides Google Search via Gemini's built-in Grounding with Google Search feature."
readme = "README.md"
requires-python = ">=3.13"
license = "Apache-2.0"
license-files = ["LICENSE"]
dependencies = [
    "mcp>=1.28.1",
    "google-genai[aiohttp]>=2.11.0",
    "orjson>=3.11.9",
    "uvloop>=0.22.1 ; sys_platform != 'win32'",
    "mdformat>=1.0.0",
    "mdformat-gfm>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/zchee/mcp-gemini-search"
Repository = "https://github.com/zchee/mcp-gemini-search"

[project.scripts]
mcp-gemini-search = "mcp_gemini_search.cli:main"

[dependency-groups]
dev = ["pytest", "anyio", "jsonschema", "pytest-benchmark", "ruff", "ty"]

[tool.uv]
prerelease = "if-necessary"

[tool.ruff]
preview = true
line-length = 120
target-version = "py313"

[tool.ruff.lint]
fixable = ["ALL"]
preview = true

select = [
    "B", # flake8-bugbear
    "C4", # flake8-comprehensions
    "D101", # pydocstyle/undocumented-public-class
    "D102", # pydocstyle/undocumented-public-method
    "D103", # pydocstyle/undocumented-public-function
    "E", # pycodestyle (Error)
    "F", # Pyflakes
    "I", # isort
    "INP001", # flake8-no-pep420/implicit-namespace-package
    "N", # pep8-naming
    "SIM", # flake8-simplify
    "TD002", # flake8-todos/missing-todo-author
    "TD006", # flake8-todos/invalid-todo-capitalization
    "TID", # flake8-tidy-imports
    "UP", # pyupgrade
    "W", # pycodestyle (Warning)
    "ANN", # flake8-annotations
    "RUF", # Ruff-specific rules
    "PIE", # flake8-pie
    "LOG", # flake8-logging
]
ignore = [
    "RUF001", # ambiguous-unicode-character-string
    "RUF003", # ambiguous-unicode-character-comment
    "ANN401", # any-type

    # ruff formatter recommends to disable those. see https://docs.astral.sh/ruff/formatter/#conflicting-lint-rules
    "COM812", # Trailing comma missing
    "COM819", # Trailing comma prohibited
    "D206", # Docstring should be indented with spaces, not tabs
    "D300", # Use triple double quotes """
    "E111", # Indentation is not a multiple of
    "E114", # Indentation is not a multiple of {indent_size} (comment)
    "E117", # Over-indented (comment)
    "E203", # Whitespace before '{symbol}'
    "E501", # Line too long ({width} > {limit})
    "ISC001", # Implicitly concatenated string literals on one line
    "ISC002", # Implicitly concatenated string literals over multiple lines
    "Q000", # Single quotes found but double quotes preferred
    "Q001", # Single quote multiline found but double quotes preferred
    "Q002", # Single quote docstring found but double quotes preferred
    "Q003", # Change outer quotes to avoid escaping inner quotes
    "W191", # Indentation contains tabs
]

[tool.ruff.format]
preview = true

[tool.ty.terminal]
error-on-warning = true

[tool.pytest.ini_options]
addopts = "-m 'not benchmark and not live'"
markers = [
    "benchmark: performance benchmarks; deselected by default, run with -m benchmark",
    "live: tests that call the real Gemini API; deselected by default, run with -m live",
    "slow: multi-minute tests excluded from -m live alone; require RUN_SLOW=1",
]
